Colaboratory를 통해 생성됨

--- a/math_symbol_prac.ipynb
+++ b/math_symbol_prac.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "math_symbol_prac.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPJ5/l0hMlsKkutScSekzCK",
+      "authorship_tag": "ABX9TyP9rCSNsi8gco8qX+RFtiju",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,20 @@
         "\n",
         "$\\frac{n!}{k!(n-k)!}=\\binom{n}{k}$\n",
         "\n",
-        "$\\lim\\limits_{x \\to \\infty} \\exp(-x)=0$"
+        "$\\lim\\limits_{x \\to \\infty} \\exp(-x)=0$\n",
+        "\n",
+        "$k_{n+1} = n^2 + k_n^2 - k_{n-1}$\n",
+        "\n",
+        "$\\displaystyle\\sum_{i=1}^{10} t_i$\n",
+        "\n",
+        "$\n",
+        "A_{m,n} = \n",
+        " \\begin{pmatrix}\n",
+        "  a_{1,1} & a_{1,2} & \\cdots & a_{1,n} \\\\\n",
+        "  a_{2,1} & a_{2,2} & \\cdots & a_{2,n} \\\\\n",
+        "  \\vdots  & \\vdots  & \\ddots & \\vdots  \\\\\n",
+        "  a_{m,1} & a_{m,2} & \\cdots & a_{m,n} \n",
+        " \\end{pmatrix}$"
       ]
     }
   ]
